# mhstrategy

./: Dockerfile  README.md  app.py  docker-compose  docker-compose.yml  pyproject.toml  setup.py
flask_app/: __init__.py  conftest.py  controller.py  model.py  test_endpoints.py
flask_app/controller/: controller.py
flask_app/model/: model.py
flask_app/monster_json/: monster_base.json
flask_app/static/styles/: home.css  monsters.css  register.css  sign.css
flask_app/templates/: home.html  login.html  monsters.html  register.html  style.css
migrations/versions/: 08048bfc0a93_.py  2e885de325dd_.py  d74de3459d6c_.py
