[tool.poetry]
name = "MHStrategy"
version = "0.1.0"
description = ""
authors = ["Victor Henrique Silva <henrictor@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"
redis = "^4.1.4"
Flask-Migrate = "^3.1.0"
Flask-Login = "^0.6.0"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
pytest = "^7.1.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
